--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
 # requirements.txt
+
+langchain>=0.1.0
+openai>=1.0.0
+python-dotenv>=1.0.0
+fastapi>=0.100.0
+pydantic>=2.0.0
+unstructured>=0.10.0
+python-multipart>=0.0.6
+pandas>=2.0.0
+docker>=6.0.0
