--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-multipart>=0.0.6
 pandas>=2.0.0
 docker>=6.0.0
 langchain>=0.0.300  
+langchain_community>=0.0.300 
 openai>=1.0.0       
 pdfplumber>=0.10.0
 pytesseract>=0.3.10
