--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
 # requirements.txt
-python-dotenv>=1.0.0
-fastapi>=0.100.0
-pydantic>=2.0.0
-unstructured>=0.10.0
-python-multipart>=0.0.6
-pandas>=2.0.0
-docker>=6.0.0
 langchain>=0.2.0
-langchain_community>=0.0.300 
-openai>=1.0.0       
+langchain_community>=0.2.0
+openai>=1.0.0
 pdfplumber>=0.10.0
 pytesseract>=0.3.10
 pillow>=10.0.0
+pydantic>=2.0.0
 python-dotenv>=1.0.0
+python-json-logger>=2.0.7
