--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# requirements.txt
-langchain>=0.2.0
-langchain_community>=0.2.0
+langchain==0.2.16  # Last stable before 0.3.0 Pydantic v2 shift
+langchain_community==0.2.16
 openai>=1.0.0
 pdfplumber>=0.10.0
 pytesseract>=0.3.10
