--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-langchain==0.2.16  # Last stable before 0.3.0 Pydantic v2 shift
+langchain==0.2.16
 langchain_community==0.2.16
+langchain-openai>=0.1.0  # Add this
 openai>=1.0.0
 pdfplumber>=0.10.0
 pytesseract>=0.3.10
