--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 langchain==0.2.16
-langchain_community==0.2.16
-langchain-openai>=0.1.0  # Add this
-openai>=1.0.0
+langchain_community==0.2.16  # For Ollama integration
 pdfplumber>=0.10.0
 pytesseract>=0.3.10
 pillow>=10.0.0
