--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 langchain==0.2.16
-langchain_community==0.2.16  # For Ollama integration
+langchain_community==0.2.16
 pdfplumber>=0.10.0
 pytesseract>=0.3.10
 pillow>=10.0.0
 pydantic>=2.0.0
 python-dotenv>=1.0.0
 python-json-logger>=2.0.7
+pandas>=2.0.0
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.25.0  # Optional for faster fuzzy matching
