--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ python-dotenv>=1.0.0
 python-json-logger>=2.0.7
 pandas>=2.0.0
 fuzzywuzzy>=0.18.0
-python-Levenshtein>=0.25.0  # Optional for faster fuzzy matching
+python-Levenshtein>=0.25.0
+aiofiles>=23.2.1
