--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ fuzzywuzzy>=0.18.0
 python-Levenshtein>=0.25.0
 aiofiles>=23.2.1
 sentence-transformers>=2.2.2
+openai>=0.27.0
+python-dotenv>=0.21.0
