chore: update requirements.txt to include FastAPI, Uvicorn, Streamlit, and Requests

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,7 @@ python-Levenshtein>=0.25.0
 aiofiles>=23.2.1
 sentence-transformers>=2.2.2
 openai>=0.27.0
-python-dotenv>=0.21.0
+fastapi>=0.115.4  # Added
+uvicorn>=0.32.0   # Added
+streamlit>=1.42.2 # Added
+requests>=2.32.3   # Added 
