--- a/frontend-nextjs/package.json
+++ b/frontend-nextjs/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-pdf": "^9.2.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
