--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -145,8 +144,9 @@ context_info.md
 /coverage
 
 # next.js
-/.next/
+.next
 /out/
+node_modules/
 
 # production
 /build
