--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,5 @@ fastapi>=0.115.4
 uvicorn>=0.32.0
 streamlit>=1.42.2
 requests>=2.32.3
-plotly>=5.18.0  # Added for performance visualizations
+plotly>=5.18.0  
+python-multipart
