--- a/frontend-nextjs/package.json
+++ b/frontend-nextjs/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.1",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@hookform/resolvers": "^3.3.4",
+    "glob": "^11.0.1",
+    "next": "^14.2.24",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
+    "rimraf": "^6.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "mini-css-extract-plugin": "^2.9.2",
-    "postcss": "^8",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
