--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
+# Install CPU-only PyTorch explicitly using the correct index URL
+RUN pip install torch==2.6.0+cpu --index-url https://download.pytorch.org/whl/cpu
+
+# Then install other dependencies from requirements.txt
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
