--- a/frontend-nextjs/package.json
+++ b/frontend-nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.66.9",
     "glob": "^11.0.1",
     "next": "^14.2.24",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-query": "^1.2.8",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.1.7",
